# ramtime

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  config.py  docker-entrypoint.sh  pyproject.toml  wsgi.py
.github/workflows/: docker.yml
app/: __init__.py  extensions.py  models.py  utils.py
app/admin/: __init__.py  routes.py
app/auth/: __init__.py  routes.py
app/employee/: __init__.py  routes.py
app/static/css/: custom.css
app/static/js/: clock.js
app/templates/: base.html
app/templates/admin/: dashboard.html  edit_entry.html  settings.html  user_form.html  users.html
app/templates/auth/: login.html
app/templates/employee/: change_password.html  dashboard.html  entry_form.html  log.html
migrations/versions/: a1b2c3d4e5f6_add_overtime_and_holiday.py  b223070a5d7e_initial_schema.py
tests/: conftest.py
tests/browser/: conftest.py  test_admin_dashboard.py  test_clock_flow.py  test_csv_export.py  test_delete_user.py  test_login_flow.py  test_manual_entry_flow.py
tests/integration/: test_admin.py  test_auth.py  test_employee.py
tests/unit/: test_models.py  test_utils.py
