[project]
name = "ramtime"
version = "0.1.5"
description = "Employee time tracking web application"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0",
    "flask-sqlalchemy>=3.1",
    "flask-migrate>=4.0",
    "flask-login>=0.6",
    "flask-bcrypt>=1.0",
    "gunicorn>=22.0",
    "flask-wtf>=1.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-flask>=1.3",
    "pytest-playwright>=0.5",
    "playwright>=1.44",
    "coverage>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]
